--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
       <div class="header_bottom">
         <div class="container-fluid">
           <nav class="navbar navbar-expand-lg custom_nav-container ">
-            <img class=logo src="images/Logo2.svg" alt="">
+            <a class="navbar-brand" href="index.html">
+              <img class=logo src="images/whitelogo.svg" alt="">
+            </a>
+            </a>
 
-
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class=""> </span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
                 <ul class="navbar-nav  ">
@@ -70,7 +70,6 @@
                 </ul>
               </div>
               <div class="quote_btn-container">
-
                 <div id="labelUsuario"></div>
                 <a href="login.html">
                   <i class="fa fa-user" aria-hidden="true"></i>
