--- a/login.html
+++ b/login.html
@@ -2,60 +2,88 @@
 <html lang="pt-BR">
 
 <head>
-  <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
   <meta name="keywords" content="Login" />
   <meta name="description" content="Página de login" />
-  <meta name="author" content="" />
+  <title>Entrar</title>
 
-  <title>Login - Mico</title>
-
-  <!-- bootstrap core css -->
+  <!-- Bootstrap CSS -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-
-  <!-- fonts style -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-
-  <!-- font awesome style -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet" />
-  <!-- custom style -->
   <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
   <link href="css/responsive.css" rel="stylesheet" />
+
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f9f9f9;
+    }
+
+    .form-box {
+      background-color: #ffffff;
+      border-radius: 16px;
+      padding: 40px;
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+      margin-top: 40px;
+      position: relative;
+    }
+
+    .img_login {
+      display: block;
+      margin: 0 auto 30px;
+      max-width: 100%;
+      width: 300px;
+      border-radius: 24px;
+    }
+
+    .form-group {
+      margin-bottom: 12px;
+    }
+
+    .btn-primary {
+      padding: 10px 30px;
+      border-radius: 8px;
+      font-weight: bold;
+      background-color: #252525;
+    }
+
+    .btn-primary:hover {
+      background-color: #000000;
+    }
+
+    .btn-top-left {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      display: flex;
+      gap: 10px;
+    }
+
+    .btn-secondary {
+      font-size: 14px;
+      padding: 6px 14px;
+      border-radius: 6px;
+    }
+  </style>
 </head>
 
 <body class="sub_page">
 
-  <div class="hero_area">
-    <!-- Botão Voltar no canto superior direito -->
-    <div class="top-right-button">
-      <a href="index.html" class="btn btn-secondary">Voltar</a>
-      <button onclick="logout()" class="btn btn-secondary">Sair</button>
-    </div>
-
-    <header class="header_section">
-      <div class="container">
-        <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html">
-            <img src="images/logo.png" alt="Logo">
-          </a>
-        </nav>
-      </div>
-    </header>
-  </div>
-
   <section class="contact_section layout_padding-bottom">
     <div class="container">
-      <div class="heading_container">
-        <h2>Login</h2>
-      </div>
       <div class="row justify-content-center">
-        <div class="col-md-6">
-          <div class="form_container">
+        <div class="col-md-8 col-lg-6">
+          <div class="form-box">
+            <!-- Botões Voltar e Sair -->
+            <div class="btn-top-left">
+              <a href="index.html" class="btn btn-secondary">Voltar</a>
+            </div>
+
+            <img class="img_login" src="images/img_para_login.png" alt="Imagem de Login">
+
             <form id="form-login" onsubmit="fazerLogin(event)">
               <div class="form-group">
                 <input type="text" name="documento" id="documento" class="form-control" placeholder="CPF/CNPJ" required>
@@ -65,38 +93,31 @@
               </div>
               <div class="form-group">
                 <select name="user_type" class="form-control">
-                  <option value="">Selecione o Tipo de Usuário</option>
-                  <option value="admin">Administrador</option>
-                  <option value="user">Usuário Comum</option>
+                  <option value="">Selecione o Tipo de Serviço</option>
+                  <option value="admin">Doar</option>
+                  <option value="user">Receber</option>
                 </select>
               </div>
-              <div class="btn_box text-center">
-                <button type="submit" class="btn btn-primary">
-                  Entrar
-                </button>
+              <div class="text-center mt-4">
+                <button type="submit" class="btn btn-primary">Entrar</button>
               </div>
             </form>
+
           </div>
         </div>
       </div>
     </div>
   </section>
 
-
-
-
-
-
-
-  <!-- footer section -->
-  <footer class="footer_section">
-    <div class="container">
+  <footer class="footer_section mt-5">
+    <div class="container text-center">
       <p>
         &copy; <span id="displayYear"></span> Todos os direitos reservados - Mico
       </p>
     </div>
   </footer>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script src="js/jquery-3.4.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
@@ -113,23 +134,21 @@
         senha: senha
       })
         .then(function (response) {
-          console.log(response.data);
           alert('Login realizado com sucesso!');
           localStorage.setItem('usuarioLogado', JSON.stringify(response.data.usuario));
           window.location.href = 'index.html';
         })
         .catch(function (error) {
-          console.error('Erro ao fazer login:', error);
           alert('Documento ou senha inválidos!');
         });
     }
+
     function logout() {
       alert('Logout realizado com sucesso!');
       localStorage.removeItem('usuarioLogado');
       window.location.href = 'login.html';
     }
   </script>
-
 
 </body>
 
