--- a/cadastro.html
+++ b/cadastro.html
@@ -33,58 +33,117 @@
 </head>
 
 <body class="sub_page">
+  <header class="header_section">
+    <div class="header_bottom">
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg custom_nav-container ">
+          
 
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class=""> </span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <div class="d-flex mr-auto flex-column flex-lg-row align-items-center">
+              <ul class="navbar-nav  ">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html"> Início<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="about.html"> Sobre</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="contact.html">Contato</a>
+                </li>
+              </ul>
+            </div>
+            <div class="quote_btn-container">
+
+              <div id="labelUsuario"></div>
+              <a href="login.html">
+                <i class="fa fa-user" aria-hidden="true"></i>
+                <span>
+                  Entrar
+                </span>
+              </a>
+            </div>
+          </div>
+        </nav>
+      </div>
+    </div>
+  </header>
   <!-- contact section -->
   <section class="contact_section layout_padding-bottom">
     <div class="container">
-      <div class="heading_container">
-        <h2>
-          Cadastro
-        </h2>
+      <!-- Logo e Título centralizados -->
+      <div class="text-center mb-4">
+        <img src="images/logo2.svg" alt="Logo da Marca" style="height: 80px; margin-bottom: 10px;margin-top: 30px;">
+        <h3>Seja bem-vindo(a) ao Ciclo Vivo</h3>
+        <p>Preencha os dados abaixo e crie sua conta</p>
       </div>
-      <div class="row">
-        <div class="col-md-7">
-          <div class="form_container">
-            <form id="form-cadastro" onsubmit="realizarCadastro(event)">
-              <div>
-                <input required id="nome" type="text" placeholder="Nome completo ou nome da empresa" />
-              </div>            
-              <div>
-                <input required id="email" type="email" placeholder="Email" />
-              </div>            
-              <div>
-                <input required type="text" id="telefone" placeholder="Número de celular" />
-              </div>
-              <div>
-                <label>
-                  <input type="radio" name="tipoPessoa" value="fisica" checked> Pessoa Física
-                </label>
-                <label>
-                  <input type="radio" name="tipoPessoa" value="juridica"> Pessoa Jurídica
-                </label>
-              </div>
-              <div id="cpfField" style="margin-top: 10px;">
-                <input type="text" id="cpf" placeholder="CPF" />
-              </div>
-              <div id="cnpjField" style="margin-top: 10px; display: none;">
-                <input type="text" id="cnpj" placeholder="CNPJ" />
-              </div>
-              <div id="password" style="margin-top: 10px;">
-                <input required type="password" id="password" placeholder="Senha" />
-              </div>
-              <div id="password_confirm" style="margin-top: 10px;">
-                <input required type="password" id="password_confirm" placeholder="Confirme sua senha" />
-              </div>
-              <p>Já possui uma conta?</p>
-              <a href="login.html" class="btn btn-outline-primary btn-sm m-1">Ir para Login</a>
-              <a href="index.html" class="btn btn-outline-secondary btn-sm m-1">Voltar para Home</a>
-              <div class="btn_box">
-                <button type="submit" class="btn btn-primary">
-                  SEND
-                </button>
+  
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <!-- Painel de fundo -->
+          <div >
+            <div class="form-cadastro">
+              <form id="form-cadastro" onsubmit="realizarCadastro(event)">
+                <div>
+                  <label for="">Nome completo ou nome da empresa:</label>
+                  <input required id="nome" type="text" placeholder="Nome completo ou nome da empresa" />
                 </div>
-              </div>
-            </form>
+                <div>
+                  <label>Email:</label>
+                  <input required id="email" type="email" placeholder="Email" />
+                </div>
+                <div>
+                  <label>Telefone:</label>
+                  <input required type="text" id="telefone" placeholder="Telefone para contato" />
+                </div>
+                <div class="radio-tipo">
+                  <label>
+                    <input type="radio" name="tipoPessoa" value="fisica" checked> Pessoa Física
+                  </label>
+                  <label>
+                    <input type="radio" name="tipoPessoa" value="juridica"> Pessoa Jurídica
+                  </label>
+                </div>
+                <div id="cpfField" style="margin-top: 10px;">
+                  <label for="">CPF:</label>
+                  <input type="text" id="documento" placeholder="CPF" />
+                </div>
+                <div id="cnpjField" style="margin-top: 10px; display: none;">
+                  <label>CNPJ:</label>
+                  <input type="text" id="documento" placeholder="CNPJ" />
+                </div>
+                <div>
+                  <label for="">Endereço:</label>
+                  <input required id="endereço" type="text" placeholder="Endereço" />
+                </div>
+                <div>
+                  <label for="">CEP:</label>
+                  <input required id="cep" type="text" placeholder="CEP" />
+                </div>
+                <div id="password" style="margin-top: 10px;">
+                  <label>Senha:</label>
+                  <input required type="password" id="password" placeholder="Senha" />
+                </div>
+                <div id="password_confirm" style="margin-top: 10px;">
+                  <label>Confirme sua senha:</label>
+                  <input required type="password" id="password_confirm" placeholder="Confirme sua senha" />
+                </div>
+                <div class="links-cadastro">
+                  <p>Já possui uma conta?</p> 
+                  <a href="login.html" class="link_login">Clique aqui</a>
+                </div>
+                <!-- Botão de envio -->
+                <div class="btn_cadastro">
+                  <button type="submit" class="btn btn-primary">Cadastrar</button>
+                </div>
+
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -123,6 +182,7 @@
       $('#telefone').mask('(00) 00000-0000');
       $('#cpf').mask('000.000.000-00');
       $('#cnpj').mask('00.000.000/0000-00');
+      $('#cep').mask('00.000-000');
   
       // Mostrar/ocultar CPF ou CNPJ
       $('input[name="tipoPessoa"]').change(function() {
@@ -145,6 +205,8 @@
     const tipoPessoa = document.querySelector('input[name="tipoPessoa"]:checked').value;
     const cpf = document.getElementById('cpf').value.trim();
     const cnpj = document.getElementById('cnpj').value.trim();
+    const endereco = document.getElementById('endereco').value.trim();
+    const cep = document.getElementById('cep').value.trim();
     const senha = document.getElementById('password').value;
     const senhaConfirm = document.getElementById('password_confirm').value;
 
@@ -169,6 +231,8 @@
       telefone,
       tipoPessoa,
       documento,
+      endereco,
+      cep,
       senha
     };
     axios.post('http://ciclovida.ki6.com.br/ciclovida/api_php/usuarios.php', dadosCadastro)
